{
  "version": 4,
  "terraform_version": "0.14.11",
  "serial": 77,
  "lineage": "fe725a39-cfa2-7744-8466-33fa56e8051e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "aws_default_subnet_5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:366187108546:subnet/subnet-5789672a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-5789672a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "366187108546",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "archUUID": "e5855611-71aa-4cbc-ad37-fb22e1764c39",
              "env": "Production"
            },
            "tags_all": {
              "archUUID": "e5855611-71aa-4cbc-ad37-fb22e1764c39",
              "env": "Production"
            },
            "vpc_id": "vpc-c677fead"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "aws_default_subnet_6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:366187108546:subnet/subnet-5c9ec810",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-5c9ec810",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "366187108546",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "archUUID": "e5855611-71aa-4cbc-ad37-fb22e1764c39",
              "env": "Production"
            },
            "tags_all": {
              "archUUID": "e5855611-71aa-4cbc-ad37-fb22e1764c39",
              "env": "Production"
            },
            "vpc_id": "vpc-c677fead"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "aws_default_vpc_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:366187108546:vpc/vpc-c677fead",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-842255ef",
            "default_route_table_id": "rtb-992879f2",
            "default_security_group_id": "sg-578bdd22",
            "dhcp_options_id": "dopt-6046240b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-c677fead",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-992879f2",
            "owner_id": "366187108546",
            "tags": {
              "archUUID": "e5855611-71aa-4cbc-ad37-fb22e1764c39",
              "env": "Production"
            },
            "tags_all": {
              "archUUID": "e5855611-71aa-4cbc-ad37-fb22e1764c39",
              "env": "Production"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_9",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:366187108546:loadbalancer/app/tf-lb-20220409131703948400000001/5cc809d64d916701",
            "arn_suffix": "app/tf-lb-20220409131703948400000001/5cc809d64d916701",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20220409131703948400000001-1681618853.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:366187108546:loadbalancer/app/tf-lb-20220409131703948400000001/5cc809d64d916701",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20220409131703948400000001",
            "security_groups": [
              "sg-02d079f31eaf89600"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-5789672a"
              },
              {
                "subnet_id": "subnet-5c9ec810"
              }
            ],
            "subnets": [
              "subnet-5789672a",
              "subnet-5c9ec810"
            ],
            "tags": {
              "archUUID": "e5855611-71aa-4cbc-ad37-fb22e1764c39",
              "env": "Production"
            },
            "tags_all": {
              "archUUID": "e5855611-71aa-4cbc-ad37-fb22e1764c39",
              "env": "Production"
            },
            "vpc_id": "vpc-c677fead",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_default_subnet.aws_default_subnet_5",
            "aws_default_subnet.aws_default_subnet_6",
            "aws_default_vpc.aws_default_vpc_3",
            "aws_security_group.aws_security_group_alb_10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "aws_lb_listener-14eb1e91",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:366187108546:listener/app/tf-lb-20220409131703948400000001/5cc809d64d916701/2ed9acbc640e1f84",
            "certificate_arn": "arn:aws:acm:us-east-2:366187108546:certificate/d2c0f434-ce30-4932-a59b-993d8d2848df",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:366187108546:targetgroup/tf-20220409132710531200000001/1c2519bb59656d93",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:366187108546:listener/app/tf-lb-20220409131703948400000001/5cc809d64d916701/2ed9acbc640e1f84",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:366187108546:loadbalancer/app/tf-lb-20220409131703948400000001/5cc809d64d916701",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {
              "archUUID": "e5855611-71aa-4cbc-ad37-fb22e1764c39",
              "env": "Production"
            },
            "tags_all": {
              "archUUID": "e5855611-71aa-4cbc-ad37-fb22e1764c39",
              "env": "Production"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_subnet.aws_default_subnet_5",
            "aws_default_subnet.aws_default_subnet_6",
            "aws_default_vpc.aws_default_vpc_3",
            "aws_lb.alb_9",
            "aws_lb_target_group.aws_lb_target_group_12",
            "aws_security_group.aws_security_group_alb_10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "aws_lb_listener_80_13",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:366187108546:listener/app/tf-lb-20220409131703948400000001/5cc809d64d916701/81ff3e10e1c4f280",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:366187108546:targetgroup/tf-20220409132710531200000001/1c2519bb59656d93",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:366187108546:listener/app/tf-lb-20220409131703948400000001/5cc809d64d916701/81ff3e10e1c4f280",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:366187108546:loadbalancer/app/tf-lb-20220409131703948400000001/5cc809d64d916701",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "archUUID": "e5855611-71aa-4cbc-ad37-fb22e1764c39",
              "env": "Production"
            },
            "tags_all": {
              "archUUID": "e5855611-71aa-4cbc-ad37-fb22e1764c39",
              "env": "Production"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_subnet.aws_default_subnet_5",
            "aws_default_subnet.aws_default_subnet_6",
            "aws_default_vpc.aws_default_vpc_3",
            "aws_lb.alb_9",
            "aws_lb_target_group.aws_lb_target_group_12",
            "aws_security_group.aws_security_group_alb_10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "aws_lb_target_group_12",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:366187108546:targetgroup/tf-20220409132710531200000001/1c2519bb59656d93",
            "arn_suffix": "targetgroup/tf-20220409132710531200000001/1c2519bb59656d93",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:366187108546:targetgroup/tf-20220409132710531200000001/1c2519bb59656d93",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-20220409132710531200000001",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "archUUID": "e5855611-71aa-4cbc-ad37-fb22e1764c39",
              "env": "Production"
            },
            "tags_all": {
              "archUUID": "e5855611-71aa-4cbc-ad37-fb22e1764c39",
              "env": "Production"
            },
            "target_type": "instance",
            "vpc_id": "vpc-c677fead"
          },
          "dependencies": [
            "aws_default_vpc.aws_default_vpc_3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_security_group_alb_10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:366187108546:security-group/sg-02d079f31eaf89600",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02d079f31eaf89600",
            "ingress": [],
            "name": "terraform-20220409132710532300000003",
            "name_prefix": "terraform-",
            "owner_id": "366187108546",
            "revoke_rules_on_delete": false,
            "tags": {
              "archUUID": "e5855611-71aa-4cbc-ad37-fb22e1764c39",
              "env": "Production"
            },
            "tags_all": {
              "archUUID": "e5855611-71aa-4cbc-ad37-fb22e1764c39",
              "env": "Production"
            },
            "timeouts": null,
            "vpc_id": "vpc-c677fead"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.aws_default_vpc_3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_security_group_db-fcaa5a30",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:366187108546:security-group/sg-044ba9a09114d94a8",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-044ba9a09114d94a8",
            "ingress": [],
            "name": "terraform-20220409132710534000000004",
            "name_prefix": "terraform-",
            "owner_id": "366187108546",
            "revoke_rules_on_delete": false,
            "tags": {
              "archUUID": "e5855611-71aa-4cbc-ad37-fb22e1764c39",
              "env": "Production"
            },
            "tags_all": {
              "archUUID": "e5855611-71aa-4cbc-ad37-fb22e1764c39",
              "env": "Production"
            },
            "timeouts": null,
            "vpc_id": "vpc-c677fead"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.aws_default_vpc_3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_security_group_ec2-de08daee",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:366187108546:security-group/sg-043aa27bcd6e33ff5",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-043aa27bcd6e33ff5",
            "ingress": [],
            "name": "terraform-20220409132710531900000002",
            "name_prefix": "terraform-",
            "owner_id": "366187108546",
            "revoke_rules_on_delete": false,
            "tags": {
              "archUUID": "e5855611-71aa-4cbc-ad37-fb22e1764c39",
              "env": "Production"
            },
            "tags_all": {
              "archUUID": "e5855611-71aa-4cbc-ad37-fb22e1764c39",
              "env": "Production"
            },
            "timeouts": null,
            "vpc_id": "vpc-c677fead"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.aws_default_vpc_3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aws_security_group_rule-675b13ef",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2733670853",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-044ba9a09114d94a8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.aws_default_vpc_3",
            "aws_security_group.aws_security_group_db-fcaa5a30"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aws_security_group_rule-aea0f141",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": -1,
            "id": "sgrule-3264140401",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "0",
            "security_group_id": "sg-044ba9a09114d94a8",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.aws_default_vpc_3",
            "aws_security_group.aws_security_group_db-fcaa5a30"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aws_security_group_rule-c92a32cb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": -1,
            "id": "sgrule-3779229335",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "0",
            "security_group_id": "sg-043aa27bcd6e33ff5",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.aws_default_vpc_3",
            "aws_security_group.aws_security_group_ec2-de08daee"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aws_security_group_rule-f362004a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-767613085",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-043aa27bcd6e33ff5",
            "self": false,
            "source_security_group_id": "sg-02d079f31eaf89600",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.aws_default_vpc_3",
            "aws_security_group.aws_security_group_alb_10",
            "aws_security_group.aws_security_group_ec2-de08daee"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aws_security_group_rule_11",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2820647757",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-044ba9a09114d94a8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.aws_default_vpc_3",
            "aws_security_group.aws_security_group_db-fcaa5a30"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aws_security_group_rule_16",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-2899612280",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-043aa27bcd6e33ff5",
            "self": false,
            "source_security_group_id": "sg-02d079f31eaf89600",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.aws_default_vpc_3",
            "aws_security_group.aws_security_group_alb_10",
            "aws_security_group.aws_security_group_ec2-de08daee"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aws_security_group_rule_17",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-2026123214",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-044ba9a09114d94a8",
            "self": false,
            "source_security_group_id": "sg-043aa27bcd6e33ff5",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.aws_default_vpc_3",
            "aws_security_group.aws_security_group_db-fcaa5a30",
            "aws_security_group.aws_security_group_ec2-de08daee"
          ]
        }
      ]
    }
  ]
}